Add rust installation step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -587,7 +587,7 @@ defaults:
       name: t_native_test_ext_prb_math
       project: prb-math
       binary_type: native
-      nodejs_version: '18.11'
+      build_dependency: rust
       script_lang: python3
   - job_native_test_ext_elementfi: &job_native_test_ext_elementfi
       <<: *workflow_ubuntu2204_static
@@ -1200,6 +1200,9 @@ jobs:
       nodejs_version:
         type: string
         default: current
+      rust_version:
+        type: string
+        default: "1.65.0"
       resource_class:
         type: string
         default: small
@@ -1209,6 +1212,9 @@ jobs:
       script_lang:
         type: string
         default: shellscript
+      build_dependency:
+        type: string
+        default: nodejs
     docker:
       - image: cimg/node:<<parameters.nodejs_version>>
     resource_class: <<parameters.resource_class>>
@@ -1238,6 +1244,21 @@ jobs:
                   # In the 14.x image node-gyp still requires Python 2.
                   sudo apt install python2 --assume-yes --no-install-recommends
                   sudo update-alternatives --install /usr/bin/python python /usr/bin/python2 1
+      - when:
+          condition:
+            equal: [<< parameters.build_dependency >>, "rust"]
+          steps:
+            - run:
+                name: Install Rust
+                command: |
+                  echo 'export PATH=/home/circleci/.cargo/bin:"$PATH"' >> "$BASH_ENV"
+                  source "$BASH_ENV"
+                  curl -O https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init && \
+                    chmod +x rustup-init && \
+                    ./rustup-init -y --no-modify-path --default-toolchain "<< parameters.rust_version >>" && \
+                    rm rustup-init && \
+                    rustc --version && \
+                    cargo --version
       - when:
           condition:
             equal: [<< parameters.binary_type >>, "solcjs"]
