--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1284,9 +1284,15 @@ jobs:
                 - equal: [<< parameters.script_lang >>, "python3"]
           steps:
             - run:
+                name: Install script dependencies
+                command: |
+                    sudo apt update
+                    sudo apt install python3-pip --assume-yes --no-install-recommends
+                    python3 -m pip install requests --user
+            - run:
                 name: External <<parameters.project>> tests (native)
                 command: |
-                  test/externalTests/<<parameters.project>>.py --solc-binary-type native --solc-binary-path /tmp/workspace/solc/solc
+                    test/externalTests/<<parameters.project>>.py --solc-binary-type native --solc-binary-path /tmp/workspace/solc/solc
       - store_artifacts:
           path: reports/externalTests/
       # persist_to_workspace fails if the directory does not exist and the test script will create
