--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -529,7 +529,7 @@ defaults:
       project: colony
       binary_type: solcjs
       compile_only: 1
-      nodejs_version: '14.20'
+      image: cimg/node:14.20
       python2: true
 
   - job_native_test_ext_gnosis: &job_native_test_ext_gnosis
@@ -537,7 +537,7 @@ defaults:
       name: t_native_test_ext_gnosis
       project: gnosis
       binary_type: native
-      nodejs_version: '16.18'
+      image: cimg/node:16.18
   - job_native_test_ext_zeppelin: &job_native_test_ext_zeppelin
       <<: *workflow_ubuntu2204_static
       name: t_native_test_ext_zeppelin
@@ -549,13 +549,13 @@ defaults:
       name: t_native_test_ext_ens
       project: ens
       binary_type: native
-      nodejs_version: '18.11'
+      image: cimg/node:18.11
   - job_native_test_ext_trident: &job_native_test_ext_trident
       <<: *workflow_ubuntu2204_static
       name: t_native_test_ext_trident
       project: trident
       binary_type: native
-      nodejs_version: '16.18'
+      image: cimg/node:16.18
   - job_native_test_ext_euler: &job_native_test_ext_euler
       <<: *workflow_ubuntu2204_static
       name: t_native_test_ext_euler
@@ -578,26 +578,25 @@ defaults:
       name: t_native_test_ext_pool_together
       project: pool-together
       binary_type: native
-      nodejs_version: '16.18'
+      image: cimg/node:16.18
   - job_native_test_ext_perpetual_pools: &job_native_test_ext_perpetual_pools
       <<: *workflow_ubuntu2204_static
       name: t_native_test_ext_perpetual_pools
       project: perpetual-pools
       binary_type: native
-      nodejs_version: '18.11'
+      image: cimg/node:18.11
   - job_native_test_ext_uniswap: &job_native_test_ext_uniswap
       <<: *workflow_ubuntu2204_static
       name: t_native_test_ext_uniswap
       project: uniswap
       binary_type: native
-      nodejs_version: '16.18'
+      image: cimg/node:16.18
   - job_native_test_ext_prb_math: &job_native_test_ext_prb_math
       <<: *workflow_ubuntu2204_static
       name: t_native_test_ext_prb_math
       project: prb-math
       binary_type: native
-      build_dependency: rust
-      script_lang: python3
+      image: cimg/rust:1.66.1
   - job_native_test_ext_elementfi: &job_native_test_ext_elementfi
       <<: *workflow_ubuntu2204_static
       name: t_native_test_ext_elementfi
@@ -609,26 +608,26 @@ defaults:
       name: t_native_test_ext_brink
       project: brink
       binary_type: native
-      nodejs_version: '18.11'
+      image: cimg/node:18.11
   - job_native_test_ext_chainlink: &job_native_test_ext_chainlink
       <<: *workflow_ubuntu2204_static
       name: t_native_test_ext_chainlink
       project: chainlink
       binary_type: native
-      nodejs_version: '16.18'
+      image: cimg/node:16.18
       resource_class: large # Tests run out of memory on a smaller machine
   - job_native_test_ext_gp2: &job_native_test_ext_gp2
       <<: *workflow_ubuntu2204_static
       name: t_native_test_ext_gp2
       project: gp2
       binary_type: native
-      nodejs_version: '18.11'
+      image: cimg/node:18.11
   - job_ems_test_ext_colony: &job_ems_test_ext_colony
       <<: *workflow_emscripten
       name: t_ems_test_ext_colony
       project: colony
       binary_type: solcjs
-      nodejs_version: '14.20'
+      image: cimg/node:14.20
       resource_class: medium
       python2: true
 
@@ -1194,7 +1193,7 @@ jobs:
             yarn test
       - gitter_notify_failure_unless_pr
 
-  t_ems_ext:
+  t_ext:
     parameters:
       project:
         type: string
@@ -1206,26 +1205,17 @@ jobs:
       compile_only:
         type: integer
         default: 0
-      nodejs_version:
+      image:
         type: string
-        default: current
-      rust_version:
-        type: string
-        default: "1.65.0"
+        default: cimg/node:current
       resource_class:
         type: string
         default: small
       python2:
         type: boolean
         default: false
-      script_lang:
-        type: string
-        default: shellscript
-      build_dependency:
-        type: string
-        default: nodejs
     docker:
-      - image: cimg/node:<<parameters.nodejs_version>>
+      - image: <<parameters.image>>
     resource_class: <<parameters.resource_class>>
     # NOTE: Each external test runs up to 6 independent settings presets. If parallelism is higher than
     # actual preset count, some runs will exit immediately. If it's lower, some runs will get more than one preset.
@@ -1256,54 +1246,20 @@ jobs:
                   sudo update-alternatives --install /usr/bin/python python /usr/bin/python2 1
       - when:
           condition:
-            equal: [<< parameters.build_dependency >>, "rust"]
-          steps:
-            - run:
-                name: Install Rust
-                command: |
-                  echo 'export PATH=/home/circleci/.cargo/bin:"$PATH"' >> "$BASH_ENV"
-                  source "$BASH_ENV"
-                  curl -O https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init && \
-                    chmod +x rustup-init && \
-                    ./rustup-init -y --no-modify-path --default-toolchain "<< parameters.rust_version >>" --profile minimal && \
-                    rm rustup-init && \
-                    rustc --version && \
-                    cargo --version
-      - when:
-          condition:
             equal: [<< parameters.binary_type >>, "solcjs"]
           steps:
             - run:
                 name: External <<parameters.project>> tests (solcjs)
                 command: |
-                  test/externalTests/<<parameters.project>>.sh solcjs /tmp/workspace/soljson.js
+                  test/externalTests/<<parameters.project>>.py solcjs /tmp/workspace/soljson.js
       - when:
           condition:
-            and:
-                - equal: [<< parameters.binary_type >>, "native"]
-                - equal: [<< parameters.script_lang >>, "shellscript"]
+            equal: [<< parameters.binary_type >>, "native"]
           steps:
-            - run:
-                name: External <<parameters.project>> tests (native)
-                command: |
-                  test/externalTests/<<parameters.project>>.sh native /tmp/workspace/solc/solc
-      - when:
-          condition:
-            and:
-                - equal: [<< parameters.binary_type >>, "native"]
-                - equal: [<< parameters.script_lang >>, "python3"]
-          steps:
-            - run:
-                name: Install script dependencies
-                command: |
-                    sudo apt update
-                    sudo apt install python3-pip --assume-yes --no-install-recommends
-                    python3 -m pip install requests --user
             - run:
                 name: External <<parameters.project>> tests (native)
                 command: |
                     test/externalTests/<<parameters.project>>.py --solc-binary-type native --solc-binary-path /tmp/workspace/solc/solc
-                no_output_timeout: 30m
       - store_artifacts:
           path: reports/externalTests/
       # persist_to_workspace fails if the directory does not exist and the test script will create
@@ -1642,23 +1598,23 @@ workflows:
       - t_ems_solcjs: *workflow_emscripten
       - t_ems_ext_hardhat: *workflow_emscripten
 
-      - t_ems_ext: *job_ems_compile_ext_colony
+      - t_ext: *job_ems_compile_ext_colony
 
-      - t_ems_ext: *job_native_test_ext_gnosis
-      - t_ems_ext: *job_native_test_ext_zeppelin
-      - t_ems_ext: *job_native_test_ext_ens
-      - t_ems_ext: *job_native_test_ext_trident
-      - t_ems_ext: *job_native_test_ext_euler
-      - t_ems_ext: *job_native_test_ext_yield_liquidator
-      - t_ems_ext: *job_native_test_ext_bleeps
-      - t_ems_ext: *job_native_test_ext_pool_together
-      - t_ems_ext: *job_native_test_ext_perpetual_pools
-      - t_ems_ext: *job_native_test_ext_uniswap
-      - t_ems_ext: *job_native_test_ext_prb_math
-      - t_ems_ext: *job_native_test_ext_elementfi
-      - t_ems_ext: *job_native_test_ext_brink
-      - t_ems_ext: *job_native_test_ext_chainlink
-      - t_ems_ext: *job_native_test_ext_gp2
+      - t_ext: *job_native_test_ext_gnosis
+      - t_ext: *job_native_test_ext_zeppelin
+      - t_ext: *job_native_test_ext_ens
+      - t_ext: *job_native_test_ext_trident
+      - t_ext: *job_native_test_ext_euler
+      - t_ext: *job_native_test_ext_yield_liquidator
+      - t_ext: *job_native_test_ext_bleeps
+      - t_ext: *job_native_test_ext_pool_together
+      - t_ext: *job_native_test_ext_perpetual_pools
+      - t_ext: *job_native_test_ext_uniswap
+      - t_ext: *job_native_test_ext_prb_math
+      - t_ext: *job_native_test_ext_elementfi
+      - t_ext: *job_native_test_ext_brink
+      - t_ext: *job_native_test_ext_chainlink
+      - t_ext: *job_native_test_ext_gp2
 
       - c_ext_benchmarks:
           <<: *workflow_trigger_on_tags
@@ -1751,4 +1707,4 @@ workflows:
 
       # Emscripten build and tests that take more than 15 minutes to execute
       - b_ems: *workflow_trigger_on_tags
-      - t_ems_ext: *job_ems_test_ext_colony
+      - t_ext: *job_ems_test_ext_colony
